--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4",
+    "express": "4.13.4",
     "firebase": "2.3.1",
     "johnny-five": "0.9.19"
   },
